feat: remove windows rsync optimization

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -2,7 +2,6 @@
 # NOTE: Use the same cypress version both in Dockerfile and package.json to
 #       avoid unnecessary cypress download
 FROM taitounited/cypress:4.9.0
-RUN apt-get -y update && apt-get -y install rsync # rsync for windows devs
 
 RUN mkdir -p /service
 WORKDIR /service
@@ -17,4 +16,4 @@ RUN npm install --loglevel warn
 
 ENV DEV_PORT 8080
 EXPOSE 8080
-CMD eval $DC_COMMAND; npm install; npm run start
+CMD npm install; npm run start
