--- a/alternatives/server-micronaut-java/Dockerfile
+++ b/alternatives/server-micronaut-java/Dockerfile
@@ -1,6 +1,5 @@
 # For local development
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-RUN apk add --update-cache rsync # rsync for windows devs
 
 RUN mkdir -p /service
 WORKDIR /service
@@ -12,4 +11,4 @@ RUN ./gradlew
 
 EXPOSE 8080
 # TODO: how to use secrets file in application.yml
-CMD eval $DC_COMMAND; DATABASE_PASSWORD=$(cat /run/secrets/DATABASE_PASSWORD) ./gradlew run
+CMD DATABASE_PASSWORD=$(cat /run/secrets/DATABASE_PASSWORD) ./gradlew run
