--- a/graphql/Dockerfile
+++ b/graphql/Dockerfile
@@ -1,7 +1,6 @@
 # Builder, tester and runtime container for local development
 # NOTE: npm libraries are installed inside container to speed up build
 FROM node:lts-alpine
-RUN apk add --update-cache rsync # rsync for windows devs
 
 RUN mkdir -p /service
 WORKDIR /service
@@ -15,4 +14,4 @@ ENV NODE_ENV development
 RUN npm install --loglevel warn
 
 EXPOSE 8080
-CMD eval $DC_COMMAND; npm install; npm run start
+CMD npm install; npm run start
