--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -23,4 +23,4 @@ RUN npm run install-site
 # Start development
 ENV DEV_PORT 8080
 EXPOSE 8080
-CMD eval $DC_COMMAND; . ~/.bashrc && ./develop.sh
+CMD . ~/.bashrc && ./develop.sh
