--- a/alternatives/server-flask/Dockerfile.build
+++ b/alternatives/server-flask/Dockerfile.build
@@ -5,8 +5,7 @@ RUN apk add --update-cache \
   g++ \
   libffi-dev \
   postgresql-dev \
-  python3-dev \
-  rsync # rsync for windows devs
+  python3-dev
 
 RUN mkdir -p /service
 WORKDIR /service
@@ -53,4 +52,4 @@ RUN mkdir -p /var/run/nginx
 RUN chown nginx:nginx /var/run/nginx
 
 EXPOSE 8080
-CMD eval $DC_COMMAND; nginx -s stop; nginx; nginx -s reload; uwsgi --ini uwsgi.ini
+CMD nginx -s stop; nginx; nginx -s reload; uwsgi --ini uwsgi.ini
