feat: add kubernetes terraform module

--- a/scripts/helm/values.yaml
+++ b/scripts/helm/values.yaml
@@ -26,6 +26,13 @@ global:
   debug: false
 
 full-stack:
+  networkPolicyEnabled: true
+
+  # These are created with Terraform
+  rbacCreate: false
+  serviceAccountCreate: false
+  podSecurityPolicyCreate: false
+
   persistence:
     enabled: false
     existingClaim:
