--- a/scripts/terraform/examples.yaml
+++ b/scripts/terraform/examples.yaml
@@ -2,6 +2,7 @@
 # Log alerts
 # ----------------------------------------------------------
 
+settings:
   alerts:
     - name: ${taito_project}-${taito_env}-alert-example
       type: log
@@ -10,3 +11,14 @@
         resource.type="k8s_container"
         resource.labels.namespace_name="${taito_project}-${taito_env}"
         jsonPayload.message:"Example message"
+
+# ----------------------------------------------------------
+# Permissions
+# ----------------------------------------------------------
+
+settings:
+  permissions:
+    statusViewers:
+      - user:john.statusviewer@mydomain.com
+    developers:
+      - user:john.developer@mydomain.com
