--- a/alternatives/client-static/nginx.conf
+++ b/alternatives/client-static/nginx.conf
@@ -33,12 +33,10 @@ http {
         root                    /service/assets;
         index                   index.html;
 
-        client_max_body_size    1m;
+        client_max_body_size    1k;
 
-        # TODO: move csp rules to helm chart and make configurable
-        add_header Content-Security-Policy "frame-ancestors 'none'" always;
-        add_header Content-Security-Policy "default-src 'self';" always;
         # TODO: avoid unsafe-inline by setting nonce for all styles
+        add_header Content-Security-Policy "default-src 'self';" always;
         add_header Content-Security-Policy "style-src 'self' fonts.googleapis.com 'unsafe-inline';" always;
         add_header Content-Security-Policy "font-src 'self' fonts.googleapis.com fonts.gstatic.com;" always;
 
