--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -33,10 +33,7 @@ http {
         root                    /service;
         index                   index.html;
 
-        client_max_body_size    1m;
-
-        # TODO: move csp rules to helm chart and make configurable
-        add_header Content-Security-Policy "frame-ancestors 'none'" always;
+        client_max_body_size    1k;
 
         error_page 404 =200     /index.html;
         error_page              500 502 503 504  /50x.html;
