feat: logging, uptime, and ci namespace id for links

--- a/scripts/helm/examples.yaml
+++ b/scripts/helm/examples.yaml
@@ -137,6 +137,12 @@ full-stack:
       memoryLimit: 512Mi    # limit to 512 MB
 
 # ----------------------------------------------------------
+# Horizontal and vertical scaling
+# ----------------------------------------------------------
+
+# TODO
+
+# ----------------------------------------------------------
 # Node selector
 # ----------------------------------------------------------
 
