--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -95,6 +95,8 @@ services:
     network_mode: "bridge"
     volumes:
       - ".:/project:delegated"
+    secrets: # CICD_TESTER_SERVICEACCOUNT_KEY
+      - CICD_TESTER_SERVICEACCOUNT_KEY
     environment:
       taito_docker: 'true'
       AZURE_CLIENT_ID: ${AZURE_CLIENT_ID}
@@ -102,7 +104,7 @@ services:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       DO_API_KEY: ${DO_API_KEY}
-      GOOGLE_APPLICATION_CREDENTIALS: ${taito_proxy_credentials_file}
+      GOOGLE_APPLICATION_CREDENTIALS: /run/secrets/CICD_TESTER_SERVICEACCOUNT_KEY
       template_default_taito_image: ${template_default_taito_image}
       template_default_environments: ${template_default_environments}
       template_default_organization: ${template_default_organization}
@@ -150,6 +152,8 @@ services:
   #   network_mode: "bridge"
   #   volumes:
   #     - ".:/project:delegated"
+  #   secrets: # CICD_TESTER_SERVICEACCOUNT_KEY
+  #     - CICD_TESTER_SERVICEACCOUNT_KEY
   #   environment:
   #     taito_docker: "true"
   #     AZURE_CLIENT_ID: ${AZURE_CLIENT_ID}
@@ -157,9 +161,11 @@ services:
   #     AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
   #     AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
   #     DO_API_KEY: ${DO_API_KEY}
-  #     GOOGLE_APPLICATION_CREDENTIALS: ${taito_proxy_credentials_file}
+  #     GOOGLE_APPLICATION_CREDENTIALS: /run/secrets/CICD_TESTER_SERVICEACCOUNT_KEY
 
 secrets:
+  CICD_TESTER_SERVICEACCOUNT_KEY:
+    file: ./tmp/secrets/${taito_env}/cicd-tester-serviceaccount.key
   DATABASE_PASSWORD:
     file: ./tmp/secrets/${taito_env}/${db_database_mgr_secret}
   DATABASE_SSL_CA:
