--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -66,7 +66,8 @@ RUN mkdir /meta && mv *.map /meta || :
 
 # Give nginx modify rights to some files that are modified at startup
 RUN find . -name '*.html' -exec chown nginx:nginx {} \; && \
-    find . -name 'runtime.*.js' -exec chown nginx:nginx {} \;
+    find . -name 'runtime.*.js' -exec chown nginx:nginx {} \; && \
+    find . -name 'manifest.json' -exec chown nginx:nginx {} \;
 
 # Startup
 USER nginx
