feat: clientMaxBodySize 1m by default for apis

--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -27,12 +27,13 @@ http {
         listen 80;
         listen [::]:80;
         server_name             localhost;
-        client_max_body_size    32m;
 
         # auth_basic              "basic";
         # auth_basic_user_file    /run/secrets/BASIC_AUTH_HTPASSWD;
 
         location /graphql {
+            client_max_body_size 1m;
+
             proxy_pass http://full-stack-template-graphql:8080;
             proxy_http_version 1.1;
 
@@ -51,6 +52,8 @@ http {
         }
 
         location /api {
+            client_max_body_size 1m;
+
             proxy_pass http://full-stack-template-server:8080;
             proxy_http_version 1.1;
 
@@ -69,6 +72,8 @@ http {
         }
 
         location /minio {
+            client_max_body_size 32m;
+
             proxy_pass http://full-stack-template-storage:9000;
             proxy_http_version 1.1;
 
@@ -84,6 +89,8 @@ http {
         }
 
         location /bucket {
+            client_max_body_size 32m;
+
             proxy_pass http://full-stack-template-storage:9000;
             proxy_http_version 1.1;
 
@@ -100,6 +107,8 @@ http {
         }
 
         location /docs {
+            client_max_body_size 1k;
+
             proxy_pass http://full-stack-template-www:8080;
             proxy_http_version 1.1;
 
@@ -118,6 +127,8 @@ http {
         }
 
         location /admin {
+            client_max_body_size 1k;
+
             proxy_pass http://full-stack-template-admin:8080;
             proxy_http_version 1.1;
 
@@ -136,6 +147,8 @@ http {
         }
 
         location / {
+            client_max_body_size 1k;
+
             proxy_pass http://full-stack-template-client:8080;
             proxy_http_version 1.1;
 
