--- a/www/nginx.conf
+++ b/www/nginx.conf
@@ -44,11 +44,22 @@ http {
         error_page              500 502 503 504  /50x.html;
 
         location / {
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            try_files $uri @index;
+        }
+
+        location @index {
+            add_header Cache-Control "public, max-age=0, must-revalidate";
             # Disable dir redirect for urls without a trailing slash
             try_files $uri $uri/index.html $uri/ =404;
         }
 
-        location /preview {
+        location ~* (.html|.json|/sw.js)$ {
+            add_header Cache-Control "public, max-age=0, must-revalidate";
+        }
+
+        location ^~ /preview {
+            add_header Cache-Control "public, max-age=0, must-revalidate";
             alias /service/preview/;
         }
 
