--- a/package.json
+++ b/package.json
@@ -155,11 +155,11 @@
     "url": "git+https://github.com/TaitoUnited/full-stack-template.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-conventional": "^9.0.1",
-    "git-branch-is": "^3.1.0",
-    "husky": "^4.2.5",
-    "npm-run-all": "~4.1.5",
-    "semantic-release": "^17.1.1"
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "git-branch-is": "^4.0.0",
+    "husky": "^4.3.0",
+    "npm-run-all": "^4.1.5",
+    "semantic-release": "^17.3.0"
   }
 }
