--- a/admin/package.json
+++ b/admin/package.json
@@ -13,18 +13,18 @@
     "analyze": "ANALYZE_BUNDLE=true npm run build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "axios": "^0.19.2",
-    "core-js": "^3.2.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.0",
+    "core-js": "^3.8.1",
     "history": "^4.10.1",
     "qs": "^6.8.0",
     "query-string": "^6.13.1",
     "ra-input-rich-text": "^3.3.1",
-    "ra-language-english": "^3.6.2",
-    "react": "^16.13.1",
-    "react-admin": "^3.6.2",
-    "react-dom": "^16.13.1",
+    "ra-language-english": "^3.10.4",
+    "react": "^17.0.1",
+    "react-admin": "^3.10.4",
+    "react-dom": "^17.0.1",
     "react-hot-loader": "^4.12.11",
     "react-redux": "^7.2.0",
     "redux-actions": "2.6.5",
@@ -32,58 +32,57 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/history": "^4.7.3",
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^26.0.18",
     "@types/lodash": "^4.14.157",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.14.11",
     "@types/qs": "^6.9.3",
     "@types/query-string": "^6.3.0",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-macros": "^3.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "^3.5.3",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-standard": "^14.0.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.4",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "source-map-loader": "0.2.4",
     "style-loader": "^1.2.1",
-    "typescript": "^3.9.3",
-    "webapp-webpack-plugin": "2.7.1",
+    "typescript": "^4.1.2",
+    "favicons-webpack-plugin": "4.2.0",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.7",
