--- a/client/package.json
+++ b/client/package.json
@@ -18,18 +18,18 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
-    "@lingui/react": "^2.9.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@sentry/browser": "^5.19.0",
+    "@lingui/react": "^2.9.2",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@sentry/browser": "^5.29.0",
     "@testing-library/jest-dom": "^5.11.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
-    "core-js": "^3.2.1",
-    "history": "^4.10.1",
+    "core-js": "^3.8.1",
+    "history": "^5.0.0",
     "query-string": "^6.13.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hot-loader": "^4.12.11",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.2.0",
@@ -38,71 +38,70 @@
     "redux-logger": "3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0",
-    "workbox-window": "^5.1.3"
+    "workbox-window": "^6.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@lingui/cli": "^2.9.1",
-    "@lingui/loader": "^2.9.1",
-    "@lingui/macro": "^2.9.1",
-    "@testing-library/react": "^10.4.3",
-    "@types/jest": "^26.0.3",
-    "@types/lingui__core": "2.7.0",
-    "@types/lingui__macro": "2.7.3",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@lingui/cli": "^3.3.0",
+    "@lingui/loader": "^3.3.0",
+    "@lingui/macro": "^3.3.0",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.18",
+    "@types/lingui__core": "^2.7.1",
+    "@types/lingui__macro": "^2.7.4",
     "@types/lingui__react": "^2.8.2",
-    "@types/node": "^14.0.14",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.0",
+    "@types/node": "^14.14.11",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "2.6.1",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-macros": "^3.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "^3.6.0",
-    "cypress": "5.2.0",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-standard": "^14.0.1",
+    "cypress": "6.1.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-standard": "^4.0.1",
+    "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^5.0.5",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "pg-promise": "^10.7.5",
-    "prettier": "^2.0.5",
-    "source-map-loader": "^1.0.1",
+    "pg-promise": "^10.8.1",
+    "prettier": "^2.2.1",
+    "source-map-loader": "^1.1.3",
     "style-loader": "^1.2.1",
-    "typescript": "^3.9.6",
-    "webapp-webpack-plugin": "2.7.1",
+    "typescript": "^4.1.2",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.8.0",
-    "webpack-pwa-manifest": "^4.2.0",
+    "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^5.1.3"
   }
 }
