wip: init django project

--- a/alternatives/server-django/Dockerfile
+++ b/alternatives/server-django/Dockerfile
@@ -1,5 +1,21 @@
 # Builder, tester and runtime container for local development
 FROM python:3.9-alpine
+ENV NODE_ENV development
+ENV DJANGO_ENV development
+ENV DJANGO_APP src
+
+RUN apk add --update-cache \
+  g++ \
+  libffi-dev \
+  postgresql-dev \
+  python3-dev
+
+RUN mkdir -p /service
+WORKDIR /service
+
+ARG SERVICE_DIR=.
+COPY ${SERVICE_DIR}/requirements-dev.txt /service/
+RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt && pip3 install ptvsd
 
 EXPOSE 8080
-CMD tail -f /dev/null # just keep running
+CMD python -m ptvsd --host 0.0.0.0 --port 9229 -m flask run --host $API_BINDADDR --port $API_PORT --no-debugger
