chore: move files

--- a/alternatives/server-django/Dockerfile
+++ b/alternatives/server-django/Dockerfile
@@ -18,4 +18,5 @@ COPY ${SERVICE_DIR}/requirements-dev.txt /service/
 RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt && pip3 install ptvsd
 
 EXPOSE 8080
-CMD python -m ptvsd --host 0.0.0.0 --port 9229 -m flask run --host $API_BINDADDR --port $API_PORT --no-debugger
+# CMD python -m ptvsd --host 0.0.0.0 --port 9229 -m $DJANGO_APP run --host $API_BINDADDR --port $API_PORT --no-debugger
+CMD python src/manage.py runserver 0.0.0.0:9229
