wip: fixing issues with docker, db and volumes

--- a/alternatives/server-django/Dockerfile
+++ b/alternatives/server-django/Dockerfile
@@ -1,8 +1,9 @@
 # Builder, tester and runtime container for local development
-FROM python:3.9-alpine
+FROM python:3.8-alpine
 ENV NODE_ENV development
 ENV DJANGO_ENV development
 ENV DJANGO_APP src
+ENV PYTHONPATH /usr/local/lib/python3.8/site-packages
 
 RUN apk add --update-cache \
   g++ \
@@ -14,9 +15,20 @@ RUN mkdir -p /service
 WORKDIR /service
 
 ARG SERVICE_DIR=.
-COPY ${SERVICE_DIR}/requirements-dev.txt /service/
-RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt && pip3 install ptvsd
+COPY ${SERVICE_DIR}/requirements-dev.txt \
+     ${SERVICE_DIR}/src/manage.py \
+     /service/
+# COPY . /service/
+# COPY ${SERVICE_DIR}/src/manage.py /service/src/
+# RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt && pip3 install ptvsd
+RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt
+# COPY ${SERVICE_DIR} /service/
 
 EXPOSE 8080
+# CMD ["python", "src/manage.py", "runserver", "0.0.0.0:9229"]
 # CMD python -m ptvsd --host 0.0.0.0 --port 9229 -m $DJANGO_APP run --host $API_BINDADDR --port $API_PORT --no-debugger
-CMD python src/manage.py runserver 0.0.0.0:9229
+CMD python3.8 manage.py runserver 0.0.0.0:9229
+# ENTRYPOINT [ "/service/src/manage.py" ]
+# ENTRYPOINT [ "tail", "-f", "/dev/null" ]
+# CMD [""]
+
