--- a/alternatives/server-django/requirements-dev.txt
+++ b/alternatives/server-django/requirements-dev.txt
@@ -8,7 +8,10 @@ asgiref==3.3.1            # via django
 attrs==20.3.0             # via pytest
 certifi==2020.12.5        # via requests, sentry-sdk
 chardet==4.0.0            # via requests
-django==3.1.4             # via -r requirements.in, sentry-sdk
+debugpy==1.2.1            # via -r requirements.in
+django-cors-headers==3.6.0  # via -r requirements.in
+django==3.1.4             # via -r requirements.in, django-cors-headers, djangorestframework, sentry-sdk
+djangorestframework==3.12.2  # via -r requirements.in
 flake8==3.8.4             # via -r requirements-dev.in
 idna==2.10                # via requests
 importlib-metadata==3.3.0  # via flake8, pluggy, pytest
